@@ -1,3 +1,10 @@
+2012-02-08  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* operation/agentes/alerts_status.php: added a check for user ACL groups in
+	the list of alerts.
+	
+	Fixes: #3484959
+
 2012-02-07 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/graphs/functions_pchart.php: Fixed a problem charting lineal
